table alignment fix
:]

--- a/HaloMMSiteMVC/Content/stylePC.css
+++ b/HaloMMSiteMVC/Content/stylePC.css
@@ -449,7 +449,7 @@ u {
 .resultsTable {
     position: fixed;
     text-align: center;
-    left: 22%;
+    left: 21%;
     top: 30%;
     background: rgba(0,0,0, 0.675);
     padding: 50px 0px 50px 0px;
